force-app/main/default/objects/B2B_Translation__c/B2B_Translation__c.object-meta.xml
<CustomObject>
    <description>Object to store records for translated values of fields and picklists.</description>
    <label>B2B Translation</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>B2B Translation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>