force-app/main/default/objects/B2B_Translation__c/fields/B2B_Commerce_Log__c.field-meta.xml
<CustomField>
    <fullName>B2B_Commerce_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Commerce Log</label>
    <referenceTo>B2B_CommerceLog__c</referenceTo>
    <relationshipLabel>B2B Translations</relationshipLabel>
    <relationshipName>B2B_Translations</relationshipName>
    <type>Lookup</type>
</CustomField>