force-app/main/default/objects/B2B_Translation__c/fields/B2B_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>B2B_ERP_ID__c</fullName>
    <description>ERP Translation ID.</description>
    <externalId>true</externalId>
    <label>B2B ERP ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>