force-app/main/default/objects/B2B_Translation__c/fields/B2B_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>B2B_Field_Name__c</fullName>
    <description>API Name of the field which will be translated</description>
    <label>B2B Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>