force-app/main/default/objects/B2B_Translation__c/fields/B2B_Message_Details__c.field-meta.xml
<CustomField>
    <fullName>B2B_Message_Details__c</fullName>
    <label>B2B Message Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>