force-app/main/default/objects/B2B_Translation__c/fields/B2B_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>B2B_Object_Name__c</fullName>
    <description>API name of the object to which the field label or picklist belongs</description>
    <label>B2B Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>