force-app/main/default/objects/B2B_Translation__c/fields/B2B_Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>B2B_Picklist_Value__c</fullName>
    <description>API Name of the picklist value</description>
    <label>B2B Picklist Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>