force-app/main/default/objects/B2B_Translation__c/fields/B2B_Status__c.field-meta.xml
<CustomField>
    <fullName>B2B_Status__c</fullName>
    <label>B2B Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>