force-app/main/default/objects/B2B_Translation__c/fields/B2B_Translation__c.field-meta.xml
<CustomField>
    <fullName>B2B_Translation__c</fullName>
    <description>Translated value of the selected field</description>
    <label>B2B Translation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>