force-app/main/default/objects/B2B_Translation__c/fields/B2B_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Type__c</fullName>
    <description>This defines if we are translating a custom field label or picklist value</description>
    <label>B2B Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Label</fullName>
            </value>
            <value>
                <fullName>Picklist Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>